Closed Bug 1817369 Opened 2 years ago Closed 2 years ago

Http3Session ProcessEvents() stops processing if it sees a WebTransport Session event

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
112 Branch
Tracking Status
firefox112 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When Http3Session::ProcessEvents() processes a WebTransport Session event, it breaks out of the event processing loop and returns NS_OK, instead of continuing to process events.

Pushed by rjesup@wgate.com: https://hg.mozilla.org/integration/autoland/rev/449b48f7ba5d Don't stop processing events when we see a WebTranport Session event r=kershaw,necko-reviewers
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: