Bug 1817369: Don't stop processing events when we see a WebTranport Session event r=kershaw,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D170166